Minor cosmetic fix to prevent #article from collapsing in mobile view

--- a/src/_common/article/small.css
+++ b/src/_common/article/small.css
@@ -1,5 +1,7 @@
 #article {
     padding: 1rem;
+    /* Although unlikely, if an article has no/near no content, #article width collapses */
+    width: 100%;
 }
 
 #article .category {
